tests/snapshots/examples_fixtures/type_system__failing__69_hm_typed_let_infix_compile_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `y` does not match its type annotation.

  examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx:35:18
   |
35 |     let y: Int = x + 1
   |                  ^^^^^
   |                  ----- this value has type `String`

   |            --- but `y` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `y` to a `Int` value or update the annotation.
== stdout ==
<not executed>
